# ParallelTest

./: .gitignore  CMakeLists.txt  README.md
src/: data_gen.cpp  data_gen.h  log.cpp  log.h  main.cpp  merge_sort.cpp  merge_sort.h  parallel_config.h  parallel_sort.cpp  parallel_sort.h
